--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,17 +738,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"../extraction/data/coastal/screening2.csv\"\n",
+    "fname = \"../extraction/data/coastal/screening3.csv\"\n",
     "df = pd.read_csv(fname, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -836,45 +836,45 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>922</th>\n",
+       "      <th>1955</th>\n",
        "      <td>10.1002/lno.70072</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>923</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>924</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>6</td>\n",
+       "      <td>18</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>925</th>\n",
+       "      <th>1956</th>\n",
        "      <td>10.1002/lno.70072</td>\n",
-       "      <td>7</td>\n",
+       "      <td>19</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>926</th>\n",
+       "      <th>1957</th>\n",
        "      <td>10.1002/lno.70072</td>\n",
-       "      <td>8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>21</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>22</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -882,40 +882,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>927 rows × 6 columns</p>\n",
+       "<p>1960 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   doi  chunk  abstract_bool definition_bool table_bool  \\\n",
-       "0    10.1002/lno.12769     -1          False             NaN        NaN   \n",
-       "1    10.1002/lno.70071     -1          False             NaN        NaN   \n",
-       "2    10.1002/lno.12802     -1           True             NaN        NaN   \n",
-       "3    10.1002/lno.12802      0           True           False      False   \n",
-       "4    10.1002/lno.12812     -1          False             NaN        NaN   \n",
-       "..                 ...    ...            ...             ...        ...   \n",
-       "922  10.1002/lno.70072      4           True           False       True   \n",
-       "923  10.1002/lno.70072      5           True           False       True   \n",
-       "924  10.1002/lno.70072      6           True           False      False   \n",
-       "925  10.1002/lno.70072      7           True           False       True   \n",
-       "926  10.1002/lno.70072      8           True           False      False   \n",
+       "                    doi  chunk  abstract_bool definition_bool table_bool  \\\n",
+       "0     10.1002/lno.12769     -1          False             NaN        NaN   \n",
+       "1     10.1002/lno.70071     -1          False             NaN        NaN   \n",
+       "2     10.1002/lno.12802     -1           True             NaN        NaN   \n",
+       "3     10.1002/lno.12802      0           True           False      False   \n",
+       "4     10.1002/lno.12812     -1          False             NaN        NaN   \n",
+       "...                 ...    ...            ...             ...        ...   \n",
+       "1955  10.1002/lno.70072     18           True           False      False   \n",
+       "1956  10.1002/lno.70072     19           True           False      False   \n",
+       "1957  10.1002/lno.70072     20           True           False      False   \n",
+       "1958  10.1002/lno.70072     21           True           False      False   \n",
+       "1959  10.1002/lno.70072     22           True           False      False   \n",
        "\n",
-       "    definition  \n",
-       "0          NaN  \n",
-       "1          NaN  \n",
-       "2          NaN  \n",
-       "3          NaN  \n",
-       "4          NaN  \n",
-       "..         ...  \n",
-       "922        NaN  \n",
-       "923        NaN  \n",
-       "924        NaN  \n",
-       "925        NaN  \n",
-       "926        NaN  \n",
+       "     definition  \n",
+       "0           NaN  \n",
+       "1           NaN  \n",
+       "2           NaN  \n",
+       "3           NaN  \n",
+       "4           NaN  \n",
+       "...         ...  \n",
+       "1955        NaN  \n",
+       "1956        NaN  \n",
+       "1957        NaN  \n",
+       "1958        NaN  \n",
+       "1959        NaN  \n",
        "\n",
-       "[927 rows x 6 columns]"
+       "[1960 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,19 +926,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "abstract_bool\n",
-       "True     868\n",
-       "False     59\n",
+       "True     1902\n",
+       "False      58\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,19 +975,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['doi', 'chunk', 'abstract_bool', 'definition_bool', 'table_bool',\n",
+       "       'definition'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "definition_bool\n",
-       "False    773\n",
-       "True      20\n",
+       "False    1809\n",
+       "True       17\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,19 +1020,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "table_bool\n",
-       "False    578\n",
-       "True     215\n",
+       "False    1743\n",
+       "True       83\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,22 +1043,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'**Seagrass:** Defined by seagrass cover, decreasing from 60% in seagrass plots to 0% in tidal flat plots. The transition from seagrass to tidal flat plots occurs across an aboveground transition, with the inflection point located at -0.04 m on the transect.\\n\\n**Mangrove:** Defined by mangrove cover, decreasing from approximately 100% in inner mangrove sampling plots to 0% in surrounding tidal flat. The transition occurs across an aboveground transition with inflection points at 0.84 m (Sungei Buloh) and 0.66 m (Sungei Puaka).\\n\\n**Tidal Flats:** Defined by a lack of seagrass and mangrove cover (0% cover). They occur adjacent to both seagrass and mangrove ecosystems.\\n\\n</end_of_turn>'"
+       "'```json\\n{\\n  \"ecosystems\": [\\n    {\\n      \"name\": \"Mangroves\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Salt Marshes\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Seagrass Meadows\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Macroalgal forests\",\\n      \"quantitative_attributes\": [\\n        \"First-order estimates of particulate macroalgal organic carbon sequestration suggest a contribution of 56 (10-170) tons of carbon yr À1 globally\"\\n      ]\\n    }\\n  ]\\n}\\n```</end_of_turn>'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df.definition_bool == True].iloc[4].definition"
+    "df.loc[df.definition_bool == True].iloc[0].definition"
    ]
   },
   {
@@ -1064,236 +1086,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['10.1002/lno.70045',\n",
-       " '10.1002/lno.70045',\n",
-       " '10.1002/lno.70045',\n",
-       " '10.1002/lno.70045',\n",
-       " '10.1002/lno.70006',\n",
-       " '10.1002/lno.70006',\n",
-       " '10.1002/lno.70006',\n",
-       " '10.1002/lno.70006',\n",
-       " '10.1002/lno.70006',\n",
-       " '10.1002/lno.70080',\n",
-       " '10.1002/lno.70080',\n",
-       " '10.1002/lno.70080',\n",
-       " '10.1002/lno.70080',\n",
-       " '10.1002/lno.12748',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.12730',\n",
-       " '10.1002/lno.70089',\n",
-       " '10.1002/lno.70089',\n",
-       " '10.1002/lno.70089',\n",
-       " '10.1002/lno.70089',\n",
-       " '10.1002/lno.70042',\n",
-       " '10.1002/lno.70042',\n",
-       " '10.1002/lno.70042',\n",
-       " '10.1002/lno.12733',\n",
-       " '10.1002/lno.12733',\n",
-       " '10.1002/lno.12742',\n",
-       " '10.1002/lno.12742',\n",
-       " '10.1002/lno.12742',\n",
-       " '10.1002/lno.12742',\n",
-       " '10.1002/lno.12742',\n",
-       " '10.1002/lno.70088',\n",
-       " '10.1002/lno.70088',\n",
-       " '10.1002/lno.70088',\n",
-       " '10.1002/lno.70062',\n",
-       " '10.1002/lno.70062',\n",
-       " '10.1002/lno.70062',\n",
-       " '10.1002/lno.70062',\n",
-       " '10.1002/lno.70062',\n",
-       " '10.1002/lno.12809',\n",
-       " '10.1002/lno.12809',\n",
-       " '10.1002/lno.12809',\n",
-       " '10.1002/lno.12809',\n",
-       " '10.1002/lno.12809',\n",
-       " '10.1002/lno.12734',\n",
-       " '10.1002/lno.12734',\n",
-       " '10.1002/lno.12734',\n",
-       " '10.1002/lno.12734',\n",
-       " '10.1002/lno.12715',\n",
-       " '10.1002/lno.12715',\n",
-       " '10.1002/lno.12800',\n",
-       " '10.1002/lno.12800',\n",
-       " '10.1002/lno.12800',\n",
-       " '10.1002/lno.12800',\n",
-       " '10.1002/lno.12800',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70060',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.70024',\n",
-       " '10.1002/lno.12781',\n",
-       " '10.1002/lno.12781',\n",
-       " '10.1002/lno.12781',\n",
-       " '10.1002/lno.70019',\n",
-       " '10.1002/lno.70019',\n",
-       " '10.1002/lno.12808',\n",
-       " '10.1002/lno.70050',\n",
-       " '10.1002/lno.70050',\n",
-       " '10.1002/lno.70050',\n",
-       " '10.1002/lno.12811',\n",
-       " '10.1002/lno.12811',\n",
-       " '10.1002/lno.12811',\n",
-       " '10.1002/lno.12811',\n",
-       " '10.1002/lno.12743',\n",
-       " '10.1002/lno.12743',\n",
-       " '10.1002/lno.70039',\n",
-       " '10.1002/lno.70039',\n",
-       " '10.1002/lno.70039',\n",
-       " '10.1002/lno.12714',\n",
-       " '10.1002/lno.12714',\n",
-       " '10.1002/lno.12714',\n",
-       " '10.1002/lno.12714',\n",
-       " '10.1002/lno.12714',\n",
-       " '10.1002/lno.12762',\n",
-       " '10.1002/lno.12762',\n",
-       " '10.1002/lno.12762',\n",
-       " '10.1002/lno.12718',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.12757',\n",
-       " '10.1002/lno.70025',\n",
-       " '10.1002/lno.70025',\n",
-       " '10.1002/lno.70025',\n",
-       " '10.1002/lno.70025',\n",
-       " '10.1002/lno.70012',\n",
-       " '10.1002/lno.70012',\n",
-       " '10.1002/lno.70012',\n",
-       " '10.1002/lno.70012',\n",
-       " '10.1002/lno.70012',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12771',\n",
-       " '10.1002/lno.12810',\n",
-       " '10.1002/lno.12810',\n",
-       " '10.1002/lno.12810',\n",
-       " '10.1002/lno.12794',\n",
-       " '10.1002/lno.12794',\n",
-       " '10.1002/lno.12794',\n",
-       " '10.1002/lno.70087',\n",
-       " '10.1002/lno.70087',\n",
-       " '10.1002/lno.70087',\n",
-       " '10.1002/lno.12795',\n",
-       " '10.1002/lno.12795',\n",
-       " '10.1002/lno.12795',\n",
-       " '10.1002/lno.12795',\n",
-       " '10.1002/lno.12795',\n",
-       " '10.1002/lno.12765',\n",
-       " '10.1002/lno.12765',\n",
-       " '10.1002/lno.12772',\n",
-       " '10.1002/lno.12772',\n",
-       " '10.1002/lno.12772',\n",
-       " '10.1002/lno.12772',\n",
-       " '10.1002/lno.12772',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12725',\n",
-       " '10.1002/lno.12749',\n",
-       " '10.1002/lno.12749',\n",
-       " '10.1002/lno.12749',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12786',\n",
-       " '10.1002/lno.12724',\n",
-       " '10.1002/lno.12724',\n",
-       " '10.1002/lno.70085',\n",
-       " '10.1002/lno.70083',\n",
-       " '10.1002/lno.70083',\n",
-       " '10.1002/lno.70083',\n",
-       " '10.1002/lno.70021',\n",
-       " '10.1002/lno.70021',\n",
-       " '10.1002/lno.70021',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.12761',\n",
-       " '10.1002/lno.70029',\n",
-       " '10.1002/lno.70029',\n",
-       " '10.1002/lno.70048',\n",
-       " '10.1002/lno.70048',\n",
-       " '10.1002/lno.70048',\n",
-       " '10.1002/lno.12720',\n",
-       " '10.1002/lno.12803',\n",
-       " '10.1002/lno.12803',\n",
-       " '10.1002/lno.12803',\n",
-       " '10.1002/lno.12803',\n",
-       " '10.1002/lno.12803',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70014',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70046',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.70056',\n",
-       " '10.1002/lno.12739',\n",
-       " '10.1002/lno.12739',\n",
-       " '10.1002/lno.12739',\n",
-       " '10.1002/lno.70072',\n",
-       " '10.1002/lno.70072',\n",
-       " '10.1002/lno.70072']"
+       "doi\n",
+       "10.1002/lno.12811    2\n",
+       "10.1002/lno.12795    2\n",
+       "10.1002/lno.70056    2\n",
+       "10.1002/lno.12739    2\n",
+       "10.1002/lno.70006    1\n",
+       "10.1002/lno.70080    1\n",
+       "10.1002/lno.70089    1\n",
+       "10.1002/lno.12742    1\n",
+       "10.1002/lno.70062    1\n",
+       "10.1002/lno.70060    1\n",
+       "10.1002/lno.12772    1\n",
+       "10.1002/lno.12724    1\n",
+       "10.1002/lno.70046    1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(df.loc[df.table_bool == True].doi)"
+    "df.loc[df.definition_bool == True].doi.value_counts()"
    ]
   },
   {
