--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,180 +748,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>doi</th>\n",
-       "      <th>chunk</th>\n",
-       "      <th>abstract_bool</th>\n",
-       "      <th>definition_bool</th>\n",
-       "      <th>table_bool</th>\n",
-       "      <th>definition</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10.1002/lno.12769</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10.1002/lno.70071</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10.1002/lno.12802</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10.1002/lno.12802</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10.1002/lno.12812</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1955</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>18</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1956</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>19</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1957</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>20</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>21</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>10.1002/lno.70072</td>\n",
-       "      <td>22</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1960 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                    doi  chunk  abstract_bool definition_bool table_bool  \\\n",
-       "0     10.1002/lno.12769     -1          False             NaN        NaN   \n",
-       "1     10.1002/lno.70071     -1          False             NaN        NaN   \n",
-       "2     10.1002/lno.12802     -1           True             NaN        NaN   \n",
-       "3     10.1002/lno.12802      0           True           False      False   \n",
-       "4     10.1002/lno.12812     -1          False             NaN        NaN   \n",
-       "...                 ...    ...            ...             ...        ...   \n",
-       "1955  10.1002/lno.70072     18           True           False      False   \n",
-       "1956  10.1002/lno.70072     19           True           False      False   \n",
-       "1957  10.1002/lno.70072     20           True           False      False   \n",
-       "1958  10.1002/lno.70072     21           True           False      False   \n",
-       "1959  10.1002/lno.70072     22           True           False      False   \n",
-       "\n",
-       "     definition  \n",
-       "0           NaN  \n",
-       "1           NaN  \n",
-       "2           NaN  \n",
-       "3           NaN  \n",
-       "4           NaN  \n",
-       "...         ...  \n",
-       "1955        NaN  \n",
-       "1956        NaN  \n",
-       "1957        NaN  \n",
-       "1958        NaN  \n",
-       "1959        NaN  \n",
-       "\n",
-       "[1960 rows x 6 columns]"
+       "Index(['doi', 'chunk', 'abstract_bool', 'definition_bool', 'table_bool',\n",
+       "       'definition'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
@@ -997,19 +841,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "definition_bool\n",
-       "False    1809\n",
-       "True       17\n",
+       "False    1810\n",
+       "True       16\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,19 +864,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "table_bool\n",
-       "False    1743\n",
-       "True       83\n",
+       "False    1479\n",
+       "True      347\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,16 +887,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'```json\\n{\\n  \"ecosystems\": [\\n    {\\n      \"name\": \"Mangroves\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Salt Marshes\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Seagrass Meadows\",\\n      \"quantitative_attributes\": [\\n        \"Store and sequester 0.5-0.8% of anthropogenic carbon dioxide emissions (141-466 tons of carbon yr À1 )\"\\n      ]\\n    },\\n    {\\n      \"name\": \"Macroalgal forests\",\\n      \"quantitative_attributes\": [\\n        \"First-order estimates of particulate macroalgal organic carbon sequestration suggest a contribution of 56 (10-170) tons of carbon yr À1 globally\"\\n      ]\\n    }\\n  ]\\n}\\n```</end_of_turn>'"
+       "'Salt marshes are being studied, specifically within three zones:\\n\\n*   **Pioneer Zone (PIO):** Flooded mostly twice a day, with a water level of 3.85 ± 5.19 cm above MHT (Mean High Tide). Primarily vegetated by *Spartina anglica* and *Salicornia europaea*.\\n*   **Low Marsh (LM):** Flooded during spring tides, with a water level of 40.55 ± 3.24 cm above MHT. More species-rich, with high abundances of *Halimione portulacoides*, *Limonium vulgare*, and *Puccinellia maritima*.\\n*   **High Marsh (HM):** Flooded only occasionally during storm tides, with a water level of 77.95 ± 5.08 cm above MHT. Dominated by *Elymus athericus*.\\n\\n</start_of_turn>'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,20 +907,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Seagrass:** Defined by seagrass cover, decreasing from 60% in seagrass plots to 0% in tidal flat plots. The transition from seagrass to tidal flat plots occurs across an aboveground transition, with the inflection point located at -0.04 m on the transect.\n",
+      "Mangroves are being studied, specifically defined by their carbon sequestration attributes:\n",
       "\n",
-      "**Mangrove:** Defined by mangrove cover, decreasing from approximately 100% in inner mangrove sampling plots to 0% in surrounding tidal flat. The transition occurs across an aboveground transition with inflection points at 0.84 m (Sungei Buloh) and 0.66 m (Sungei Puaka).\n",
+      "*   They sequester between 1.9 and 2.6 PgC in organic carbon globally in the top 1 m of soil.\n",
+      "*   The soil organic carbon (SOC) burial rate is estimated to be 20.2 TgC yr À1 for mangroves worldwide.\n",
+      "*   The estimated outwelling of dissolved inorganic carbon (DIC) from mangrove soil to the ocean is 366 TgC yr À1.\n",
+      "*   They are characterized by burrowing activity in the soil and tidal pumping.\n",
       "\n",
-      "**Tidal Flats:** Defined by a lack of seagrass and mangrove cover (0% cover). They occur adjacent to both seagrass and mangrove ecosystems.\n",
       "\n",
-      "</end_of_turn>\n"
+      "\n",
+      "</start_of_turn>\n"
      ]
     }
    ],
@@ -1086,36 +933,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "doi\n",
-       "10.1002/lno.12811    2\n",
-       "10.1002/lno.12795    2\n",
-       "10.1002/lno.70056    2\n",
-       "10.1002/lno.12739    2\n",
-       "10.1002/lno.70006    1\n",
-       "10.1002/lno.70080    1\n",
-       "10.1002/lno.70089    1\n",
-       "10.1002/lno.12742    1\n",
-       "10.1002/lno.70062    1\n",
-       "10.1002/lno.70060    1\n",
-       "10.1002/lno.12772    1\n",
-       "10.1002/lno.12724    1\n",
-       "10.1002/lno.70046    1\n",
-       "Name: count, dtype: int64"
+       "53"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df.definition_bool == True].doi.value_counts()"
+    "len(df.loc[df.table_bool == True].doi.value_counts())"
    ]
   },
   {
