--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -738,28 +738,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"../extraction/data/coastal/screening3.csv\"\n",
+    "fname = \"../extraction/data/coastal/screening4.csv\"\n",
     "df = pd.read_csv(fname, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['doi', 'chunk', 'abstract_bool', 'definition_bool', 'table_bool',\n",
-       "       'definition'],\n",
+       "       'measurement_bool'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,19 +770,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "abstract_bool\n",
-       "True     1902\n",
-       "False      58\n",
+       "True     63\n",
+       "False     6\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,25 +841,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "definition_bool\n",
-       "False    1810\n",
-       "True       16\n",
+       "measurement_bool\n",
+       "False    59\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.definition_bool.value_counts()"
+    "df.measurement_bool.value_counts()"
    ]
   },
   {
