--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -15,7 +15,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Screening Experiments"
+    "### Pond Screening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"../extraction/data/pond/pond_screening2.csv\"\n",
+    "df = pd.read_csv(fname, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ponds3: The context defines **lakes** as being larger than the ponds studied. The ponds are described as **small (\\<1000 m<sup>2</sup>)**, **temporary**, and **forested**. It also states that the ponds are **polymictic**, meaning much of the water is in contact with the carbon-rich sediments. \n",
+      "</start_of_turn>\n",
+      "\n",
+      "ponds3: The context defines temporary ponds as shallow (\\<1 m), lacking inlets and outlets, and having little emergent vegetation. They typically fill with autumnal rains, freeze over the winter, thaw in early spring, and dry by late summer or early fall, though hydroperiod is sensitive to precipitation events. \n",
+      "\n",
+      "</start_of_turn>\n",
+      "\n",
+      "definitions3: The context defines ponds as **small (1 m<sup>2</sup> to ∼50,000 m<sup>2</sup>), shallow, standing water bodies that can either permanently or temporarily collect freshwater.**\n",
+      "</end_start_of_turn>\n",
+      "\n",
+      "lakes1: The context defines lakes as systems that ranged in size from 0.1 ha (ponds) to 1,729 ha (midsized lakes). \n",
+      "\n",
+      "It also defines ponds as being 0.1 ha in size.\n",
+      "\n",
+      "\n",
+      "definitions2: Ponds are small standing waters varying in size from 1 m² to about 2-5 ha in area and may be permanent or seasonal, man-made or naturally created. \n",
+      "\n",
+      "The context also states that while attempts have been made to define the difference between a pond and a lake, large ponds and small lakes share many characteristics, and the transition between the two is gradual. Occasionally, studies restrict 'pond' to waters of no more than 0.5 ha or extend it to up to 8 m in depth or 10 ha in area. The Ramsar Convention adopted a cut-off between ponds and lakes of 8 ha.\n",
+      "</end_of_turn>\n",
+      "\n",
+      "definitions2: According to the context, Charles Elton defined ponds as waterbodies less than 1 acre in size (Elton & Miller, 1954).\n",
+      "\n",
+      "\n",
+      "definitions2: The context defines small waterbodies as including natural, artificial and heavily modified waterbodies. It does not provide a more specific definition for either ponds or lakes beyond this categorization.\n",
+      "\n",
+      "\n",
+      "ponds2: The context defines **ponds** as: small lentic ecosystems that permanently or temporarily hold water. They are shallow and their size ranges from a few square metres to several hectares, and can be natural or man-made.\n",
+      "\n",
+      "It also defines **lakes** as being moderately large, contrasting them with ponds.\n",
+      "</start_of_turn>\n",
+      "\n",
+      "ponds2: The context defines aquatic macrophytes as follows: woody species and other non-hygrophilous species were excluded from analyses. It does not give a definition for ponds or lakes specifically, but rather defines what *is not* included when studying aquatic macrophytes in these waterbodies.\n",
+      "\n",
+      "\n",
+      "definitions1: The context defines ponds as waterbodies that \"correspond to the criteria of the definition of a pond presented by Oertli et al. (2005a)\". It does not provide the specific criteria themselves, only referencing the source where they can be found. \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "defs = df.loc[df.definition_bool == True]\n",
+    "for i in defs.index:\n",
+    "    print(f\"{defs.loc[i, \"doi\"]}: {defs.loc[i, 'definition']}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coastal Screening"
    ]
   },
   {
