--- a/examples/testing.ipynb
+++ b/examples/testing.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Chat Models\n",
     "from huggingface_hub import hf_hub_download\n",
     "from langchain_ollama import ChatOllama\n",
+    "from ollama import chat as ollama_chat\n",
+    "from ollama import ChatResponse\n",
     "\n",
     "# Chat structure\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -23,6 +34,81 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Client.chat of <ollama._client.Client object at 0x111c87410>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ollama_chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL = \"gemma3:12b-it-qat\"\n",
+    "messages = [\n",
+    "            {'role': 'user', 'content':  \"You are a helpful assistant.\"},\n",
+    "            {'role': 'user', 'content': \"The sky is orange today. But the sky is typically purple.\"},\n",
+    "            {'role': 'user', 'content': \"What is the color of the sky on most days?\"}\n",
+    "        ]\n",
+    "response = ollama_chat(model=MODEL, messages=messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatResponse(model='gemma3:12b-it-qat', created_at='2025-06-23T18:37:51.030045Z', done=True, done_reason='stop', total_duration=2296413042, load_duration=35148209, prompt_eval_count=58, prompt_eval_duration=673862125, eval_count=19, eval_duration=1586574000, message=Message(role='assistant', content='The color of the sky on most days is purple.\\n', images=None, tool_calls=None))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The color of the sky on most days is purple.\\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.message.content"
    ]
   },
   {
