--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,48 +30,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ponds3: The context defines **lakes** as being larger than the ponds studied. The ponds are described as **small (\\<1000 m<sup>2</sup>)**, **temporary**, and **forested**. It also states that the ponds are **polymictic**, meaning much of the water is in contact with the carbon-rich sediments. \n",
+      "ponds3: The context defines **lakes** as being larger than the **small ponds** studied. The ponds are specifically described as being less than 1000 m<sup>2</sup> in size. \n",
+      "\n",
+      "Additionally, the context implies a difference in physical, chemical, and biological parameters between the ponds and larger lakes. \n",
+      "\n",
+      "</end_of_turn>\n",
+      "\n",
+      "ponds3: According to the text, temporary ponds like those studied are shallow (less than 1 meter), lack inlets and outlets, and have little emergent vegetation. \n",
+      "\n",
+      "Additionally, the text states they typically fill with autumnal rains, freeze over the winter, thaw in early spring, and dry by late summer or early fall, though hydroperiod is sensitive to precipitation events.\n",
       "</start_of_turn>\n",
       "\n",
-      "ponds3: The context defines temporary ponds as shallow (\\<1 m), lacking inlets and outlets, and having little emergent vegetation. They typically fill with autumnal rains, freeze over the winter, thaw in early spring, and dry by late summer or early fall, though hydroperiod is sensitive to precipitation events. \n",
-      "\n",
-      "</start_of_turn>\n",
-      "\n",
-      "definitions3: The context defines ponds as **small (1 m<sup>2</sup> to ∼50,000 m<sup>2</sup>), shallow, standing water bodies that can either permanently or temporarily collect freshwater.**\n",
+      "definitions3: The context defines ponds as small (1 m<sup>2</sup> to ∼50,000 m<sup>2</sup>), shallow, standing water bodies that can either permanently or temporarily collect freshwater.\n",
       "</end_start_of_turn>\n",
-      "\n",
-      "lakes1: The context defines lakes as systems that ranged in size from 0.1 ha (ponds) to 1,729 ha (midsized lakes). \n",
-      "\n",
-      "It also defines ponds as being 0.1 ha in size.\n",
-      "\n",
       "\n",
       "definitions2: Ponds are small standing waters varying in size from 1 m² to about 2-5 ha in area and may be permanent or seasonal, man-made or naturally created. \n",
       "\n",
-      "The context also states that while attempts have been made to define the difference between a pond and a lake, large ponds and small lakes share many characteristics, and the transition between the two is gradual. Occasionally, studies restrict 'pond' to waters of no more than 0.5 ha or extend it to up to 8 m in depth or 10 ha in area. The Ramsar Convention adopted a cut-off between ponds and lakes of 8 ha.\n",
-      "</end_of_turn>\n",
-      "\n",
-      "definitions2: According to the context, Charles Elton defined ponds as waterbodies less than 1 acre in size (Elton & Miller, 1954).\n",
-      "\n",
-      "\n",
-      "definitions2: The context defines small waterbodies as including natural, artificial and heavily modified waterbodies. It does not provide a more specific definition for either ponds or lakes beyond this categorization.\n",
-      "\n",
-      "\n",
-      "ponds2: The context defines **ponds** as: small lentic ecosystems that permanently or temporarily hold water. They are shallow and their size ranges from a few square metres to several hectares, and can be natural or man-made.\n",
-      "\n",
-      "It also defines **lakes** as being moderately large, contrasting them with ponds.\n",
+      "While the text acknowledges a historical attempt to *define the difference* between ponds and lakes, it states that large ponds and small lakes share many characteristics, and the transition between them is gradual. It does not give a clear distinguishing definition *of* lakes, only of ponds.\n",
       "</start_of_turn>\n",
       "\n",
-      "ponds2: The context defines aquatic macrophytes as follows: woody species and other non-hygrophilous species were excluded from analyses. It does not give a definition for ponds or lakes specifically, but rather defines what *is not* included when studying aquatic macrophytes in these waterbodies.\n",
+      "definitions2: The context defines small lakes as those in the 5-10 ha size range. </end_of_turn>\n",
+      "\n",
+      "definitions2: According to the text, Charles Elton defined ponds as waterbodies less than 1 acre (Elton & Miller, 1954). \n",
+      "</start_of_turn>\n",
+      "\n",
+      "definitions2: The context defines small waterbodies as including natural, artificial and heavily modified waterbodies. It does *not* provide a distinguishing attribute or descriptive characteristic to differentiate ponds or lakes from other waterbodies, only that they encompass these three types. It also states they are the commonplace freshwater habitats in virtually all landscapes. \n",
+      "\n",
+      "ponds2: The context defines ponds as: “small lentic ecosystems that permanently or temporarily hold water”. It further specifies that they are shallow and range in size “from a few square metres to several hectares”.\n",
+      "\n",
+      "ponds2: The context defines aquatic macrophytes as excluding woody species and other non-hygrophilous species. It does not define ponds or lakes directly, but specifies what *is not* included when studying aquatic macrophytes within them.\n",
       "\n",
       "\n",
-      "definitions1: The context defines ponds as waterbodies that \"correspond to the criteria of the definition of a pond presented by Oertli et al. (2005a)\". It does not provide the specific criteria themselves, only referencing the source where they can be found. \n",
+      "definitions1: The context defines ponds as those water bodies that “correspond to the criteria of the definition of a pond presented by Oertli et al. (2005a)”. It does not specify what those criteria *are*, only that they are defined elsewhere.\n",
       "\n",
       "\n"
      ]
