--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,12 +844,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"../extraction/data/coastal/screening5.csv\"\n",
+    "fname = \"../extraction/data/coastal/screening.csv\"\n",
     "df = pd.read_csv(fname, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "doi\n",
+       "10.1002/lno.12724    24\n",
+       "10.1002/lno.12759    18\n",
+       "10.1002/lno.70021    18\n",
+       "10.1002/lno.12811    18\n",
+       "10.1002/lno.12786    17\n",
+       "                     ..\n",
+       "10.1002/lno.12797     1\n",
+       "10.1002/lno.70003     1\n",
+       "10.1002/lno.12751     1\n",
+       "10.1002/lno.12768     1\n",
+       "10.1002/lno.12769     1\n",
+       "Name: count, Length: 134, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.doi.value_counts()"
    ]
   },
   {
